testdata/fun/non_valid.lox
fun scope(x_) {
    var a = a + " local"; // error: line 2 at 'a': can't read local variable in its own initializer
    print a;
}

scope("outer");

fun dale(x) {
    var x = 1; // error: line 9 at 'x': already a variable with this name in scope
    print x;
}

{
    fun foo_(){}
    fun foo_(){}  // error: line 15 at 'foo_': already a variable with this name in scope
}
